change url github

--- a/app.json
+++ b/app.json
@@ -7,6 +7,6 @@
     "sample",
     "example"
   ],
-  "website": "https://github.com/fandu139/admbackend",
-  "repository": "http://github.com/heroku/go-getting-started"
+  "website": "https://git.heroku.com/shrouded-chamber-70937.git",
+  "repository": "https://git.heroku.com/shrouded-chamber-70937.git"
 }
